# basednode

./: .gitignore  CODEOWNERS  Cargo.toml  Dockerfile  GENERATOR_DICT.md  README.md  docker-compose.yml  ex_agent_contract.json  ex_agent_dictionary.json  hyperparameters.md  mainnet1_raw.json
integration-tests/: Cargo.toml
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  cli.rs  client.rs  command.rs  eth.rs  lib.rs  main.rs  service.rs
node/src/rpc/: mod.rs
node/tests/: chain_spec.rs
pallets/admin-utils/: Cargo.toml
pallets/admin-utils/scripts/: benchmark.sh
pallets/admin-utils/src/: benchmarking.rs  lib.rs  weights.rs
pallets/admin-utils/tests/: mock.rs  tests.rs
pallets/basednode/: Cargo.toml
pallets/basednode/rpc/: Cargo.toml
pallets/basednode/rpc/src/: lib.rs
pallets/basednode/runtime-api/: Cargo.toml
pallets/basednode/runtime-api/src/: lib.rs
pallets/basednode/src/: agent_info.rs  benchmarks.rs  block_step.rs  brain_info.rs  delegate_info.rs  epoch.rs  lib.rs  migration.rs  registration.rs  root.rs  serving.rs  stake_info.rs  staking.rs  tft_enforcer_data.rs  uids.rs  utils.rs  weights.rs
pallets/basednode/tests/: block_step.rs  difficulty.rs  epoch.rs  migration.rs  mock.rs  networks.rs  neuron_info.rs  registration.rs  root.rs  senate.rs  serving.rs  staking.rs  uids.rs  weights.rs
pallets/collective/: Cargo.toml
pallets/commitments/: Cargo.toml
pallets/commitments/scripts/: benchmark.sh
pallets/commitments/src/: lib.rs  weights.rs
pallets/registry/: Cargo.toml
pallets/registry/scripts/: benchmark.sh
pallets/registry/src/: lib.rs  weights.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: benchmark.sh  bootnode.sh  localnet.sh  test_specific.sh
scripts/run/: basednode.sh
