[workspace]
members = [
    "integration-tests",
    "node",
    "pallets/basednode",
    "pallets/commitments",
    "runtime",
]

[profile.release]
panic = "unwind"

[profile.test]
opt-level = 3

[patch."https://github.com/paritytech/substrate"]
frame-benchmarking = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
frame-benchmarking-cli = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
frame-executive = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
frame-support = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
frame-support-procedural = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
frame-system = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
frame-system-rpc-runtime-api = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
frame-try-runtime = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
pallet-aura = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
pallet-authorship = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
pallet-balances = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
pallet-grandpa = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
pallet-insecure-randomness-collective-flip = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
pallet-membership = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
pallet-multisig = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
pallet-preimage = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
pallet-scheduler = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
pallet-session = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
pallet-sudo = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
pallet-timestamp = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
pallet-transaction-payment = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
pallet-transaction-payment-rpc = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
pallet-utility = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sc-allocator = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sc-basic-authorship = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sc-block-builder = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sc-chain-spec = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sc-chain-spec-derive = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sc-cli = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sc-client-api = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sc-client-db = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sc-consensus = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sc-consensus-aura = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sc-consensus-babe = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sc-consensus-epochs = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sc-consensus-manual-seal = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sc-consensus-slots = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sc-executor = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sc-executor-common = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sc-executor-wasmi = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sc-executor-wasmtime = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sc-finality-grandpa = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sc-informant = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sc-keystore = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sc-network = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sc-network-bitswap = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sc-network-common = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sc-network-gossip = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sc-network-light = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sc-network-sync = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sc-network-transactions = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sc-offchain = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sc-peerset = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sc-proposer-metrics = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sc-rpc = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sc-rpc-api = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sc-rpc-server = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sc-rpc-spec-v2 = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sc-service = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sc-storage-monitor = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sc-sysinfo = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sc-telemetry = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sc-transaction-pool = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sc-transaction-pool-api = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sc-tracing = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sc-tracing-proc-macro = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sp-api = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sp-api-proc-macro = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sp-application-crypto = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sp-arithmetic = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sp-block-builder = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sp-blockchain = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sp-consensus = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sp-consensus-aura = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sp-consensus-babe = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sp-consensus-slots = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sp-consensus-vrf = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sp-core = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sp-core-hashing = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sp-core-hashing-proc-macro = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sp-database = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sp-debug-derive = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sp-externalities = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sp-finality-grandpa = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sp-inherents = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sp-io = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sp-keystore = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sp-maybe-compressed-blob = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sp-offchain = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sp-panic-handler = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sp-rpc = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sp-runtime = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sp-runtime-interface = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sp-runtime-interface-proc-macro = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sp-session = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sp-state-machine = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sp-staking = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sp-std = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sp-storage = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sp-timestamp = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sp-tracing = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sp-transaction-pool = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sp-transaction-storage-proof = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sp-trie = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sp-version = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sp-version-proc-macro = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sp-wasm-interface = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
sp-weights = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
substrate-build-script-utils = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
substrate-frame-rpc-system = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
substrate-prometheus-endpoint = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
substrate-wasm-builder = { git = "https://github.com/bf1337/substrate.git", branch = "v0.9.39-schnorrkel-fix" }
